--- a/z4/templates/login.html
+++ b/z4/templates/login.html
@@ -2,8 +2,7 @@
 <html> 
 	<head>
 		<meta charset="utf-8" />
-		<!--<script src="static/main.js" defer="defer"></script>
-		<link rel="stylesheet" type="text/css" href="/static/index.css" /> -->
+		<link rel="Stylesheet" type="text/css" href="static/style.css" />
 	</head>
 	<body>
 		<h1>Zaloguj</h1>
