--- a/z4/templates/upload.html
+++ b/z4/templates/upload.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>Strona uzytkownika</title>
+		<link rel="Stylesheet" type="text/css" href="static/style.css" />
 		<meta charset="utf-8" />
 	</head>
 	<body>
