Dodany token do uploadu

--- a/z4/templates/upload.html
+++ b/z4/templates/upload.html
@@ -11,6 +11,7 @@
 		<form id="uploadFile" method="POST" action="/pogodzip/login/uploading" enctype="multipart/form-data">
       			<input type="file" id="browsing" name="file" value="Przeglądaj">
 			<input type="submit" id="submitButton" value="Wyślij">
+			<input type="hidden" id="token" value="{{token}}">
 		</form>
 		<br>
                 <nav>
