--- a/z9/templates/index.html
+++ b/z9/templates/index.html
@@ -3,18 +3,33 @@
 	<head>
 		<title>Strona główna</title>
 		<link rel="Stylesheet" type="text/css" href="static/style.css" />
-		<link rel="Bootstrap" type="text/css" href="static/bootstrap.css" />
+		<link rel="Stylesheet" type="text/css" href="static/bootstrap.css" />
 		<meta charset="utf-8" />
 	</head>
 	<body>
-		<button type="button" class="btn btn-primary">Primary</button>
-		<h1>Wybierz akcję</h1>
-		<ul>
-			<li><a href="login">Zaloguj się</a></li>
-			<li><a href="logout">Wyloguj się</a></li>
-			<li><a href="download">Pobierz plik</a></li>
-			<li><a href="upload">Wyślij plik</a></li>
-		</ul>
+		<div class="jumbotron">
+			<p class="text-center"><h1><center>WEBAPP</center></h1></p>
+		</div>
+
+		<div class="jumbotron" id="loginname"><center>Witaj {{user}}</center></div>
+
+		<div class="container-fluid">
+		<div class="row">
+			<div class="col">
+				<div class="jumbotron">
+					<ul class="list-group">
+						<li class="list-group-item"><a href="login">Zaloguj się</a></li>
+						<li class="list-group-item"><a href="logout">Wyloguj się</a></li>
+						<li class="list-group-item"><a href="download">Pobierz plik</a></li>
+						<li class="list-group-item"><a href="upload">Wyślij plik</a></li>
+					</ul>
+				</div>
+			</div>
+			<div class="col-8">
+				<div class="jumbotron">Wybierz akcję z listy po lewej stronie</div>
+			</div>
+                </div>
+		</div>
 	</body>
 </html>
 
