--- a/z9/templates/login.html
+++ b/z9/templates/login.html
@@ -3,13 +3,34 @@
 	<head>
 		<meta charset="utf-8" />
 		<link rel="Stylesheet" type="text/css" href="static/style.css" />
+		<link rel="Stylesheet" type="text/css" href="static/bootstrap.css" />
+
 	</head>
 	<body>
-		<h1>Zaloguj</h1>
-		<a href="loginAuth">Zaloguj z wykorzystaniem auth0</a>
-		<br>
-		<nav>
-			<li><a href="index.html">Strona główna</a></li>
-		</nav>
+		<div class="jumbotron">
+			<p class="text-center"><h1><center>WEBAPP</center></h1></p>
+                </div>
+
+		<div class="jumbotron" id="loginname"><center>Witaj {{user}}</center></div>
+
+                <div class="container-fluid">
+                <div class="row">
+                        <div class="col">
+                                <div class="jumbotron">
+                                        <ul class="list-group">
+                                                <li class="list-group-item"><a href="login">Zaloguj się</a></li>
+                                                <li class="list-group-item"><a href="logout">Wyloguj się</a></li>
+                                                <li class="list-group-item"><a href="download">Pobierz plik</a></li>
+                                                <li class="list-group-item"><a href="upload">Wyślij plik</a></li>
+                                        </ul>
+                                </div>
+                        </div>
+                        <div class="col-8">
+                                <div class="jumbotron">
+					<h1>Zaloguj</h1>
+        			        <a href="loginAuth">Zaloguj z wykorzystaniem auth0</a>
+				</div>
+                        </div>
+                </div>
 	</body>
 </html>
