--- a/z9/templates/upload.html
+++ b/z9/templates/upload.html
@@ -32,7 +32,7 @@
 			                Wskaż plik do wysłania:
                 			<form id="uploadFile" method="POST" action="/pogodzip/dl/uploading" enctype="multipart/form-data">
                 			        <input type="file" id="browsing" name="file" value="Przeglądaj">
-                        			<input type="hidden" id="token" value="{{token}}">
+                        			<input type="hidden" name="token" value="{{token}}">
                         			<input type="submit" id="submitButton" value="Wyślij">
                 			</form>
                                 </div>
