--- a/z9/templates/home.html
+++ b/z9/templates/home.html
@@ -34,6 +34,7 @@
                         		        <input type="submit" value="{{record[0]}}">
                                 		<input type="hidden" name="token" value="{{token}}">
                         		</form>
+					<img src="{{record[3]}}" onerror="this.src='/pogodzip/webapp/static/images/error.png'">
 
                 			{% endfor %}
 				</div>
